# loop-support

./: .gitignore  Procfile  README.md  credentials.md  deploy.md  nixpacks.toml  process_telegram_messages.py  project-structure.md  railway.json  stable_webhook.sh
Support_Page_Design/: .env.example  env.example  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
Support_Page_Design/backend/: README.md  pyproject.toml  requirements.txt  run_with_tunnel.sh
Support_Page_Design/backend/app/: database.py  main.py  models.py  schemas.py  telegram.py
Support_Page_Design/backend/support_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Support_Page_Design/src/: App.tsx  index.css  main.tsx
Support_Page_Design/src/assets/optimized/: 0d961142b622ac52cec4f149ceb19aadfa1e9900_1x.avif  0d961142b622ac52cec4f149ceb19aadfa1e9900_2x.avif  1b3d3e279b26f64879bc68b6b00992f0c2f372e2_1x.avif  1b3d3e279b26f64879bc68b6b00992f0c2f372e2_2x.avif  2302151c517efebea1d55362ce28f3214ff746cc_1x.avif  2302151c517efebea1d55362ce28f3214ff746cc_2x.avif  2302151c517efebea1d55362ce28f3214ff746cc_3x.avif  39c08f6b5f5448d460f0f3185fe17e46dd653020_1x.avif  39c08f6b5f5448d460f0f3185fe17e46dd653020_2x.avif  39c08f6b5f5448d460f0f3185fe17e46dd653020_3x.avif
Support_Page_Design/src/components/: ChatWindow.tsx  ExpandedCard.tsx  SupportCard.tsx  SupportModal.tsx  TicketForm.tsx  TypingIndicator.tsx
Support_Page_Design/src/modules/support/: SupportProvider.tsx  api.ts  config.ts  index.ts  session.ts  types.ts  useSupportSession.ts
