[project]
name = "support-backend"
version = "0.1.0"
description = "FastAPI backend for Support Page"
requires-python = "~=3.11"
dependencies = [
  "fastapi~=0.114.0",
  "uvicorn[standard]~=0.30.0",
  "sqlalchemy~=2.0",
  "pydantic~=2.8",
  "python-dotenv~=1.0",
  "httpx~=0.25.0"
]

[project.optional-dependencies]
dev = ["pytest", "httpx", "anyio"]

[tool.uvicorn]
app = "app.main:app"
reload = true
host = "0.0.0.0"
port = 8000
